--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,10 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "no-console":"error",
+    "no-unused-expressions":"error",
+    "no-undef":"error",
+    "no-unreachable":"error"
   },
 
   "env": {
