--- a/.eslintrc
+++ b/.eslintrc
@@ -12,10 +12,9 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "no-console":"error",
+    "no-console":"warn",
     "no-unused-expressions":"error",
-    "no-undef":"error",
-    "no-unreachable":"error"
+     "no-unreachable":"error"
   },
 
   "env": {
