--- a/package.json
+++ b/package.json
@@ -34,10 +34,15 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.8",
+    "add": "^2.0.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "yarn": "^1.22.19",
+    "zod": "^3.21.4"
   }
 }
